# yolo_service

./: example_usage.py  run_yolo_standalone.py  run_yolo_video.py  yolo_service.py  yolo_service_readme.md
c++/: CMakeLists.txt  build_headless.sh  build_image_processor.sh  test_yolo.cpp  test_yolo_headless.cpp  yolo_image_processor.cpp
docker/test_cpp_container/: Dockerfile  README.md  build.sh  docker-compose.yml  test_container.sh
docker/test_yolo_service_container/: Dockerfile  docker-compose.yml
